Added deepslate variant of elemental ore