@@ -57,6 +57,7 @@ public class BlockStateProvider extends net.minecraftforge.client.model.generato
 
         // Elemental Stone
         simpleBlock(ModBlocks.ELEMENTAL_ORE.get());
+        simpleBlock(ModBlocks.DEEPSLATE_ELEMENTAL_ORE.get());
         simpleBlock(ModBlocks.CELESTIAL_FOCUS.get(), models().getExistingFile(modLoc("block/celestial_focus")));
 
         simpleBlock(ModBlocks.ELEMENTAL_SHARDS_BLOCK.get());
@@ -65,7 +66,7 @@ public class BlockStateProvider extends net.minecraftforge.client.model.generato
         simpleBlock(ModBlocks.AIR_SHARDS_BLOCK.get());
         simpleBlock(ModBlocks.FIRE_SHARDS_BLOCK.get());
 
-        for (Block block : ModBlocks.BLOCKS.getEntries().stream().map(RegistryObject::get).collect(Collectors.toList())) {
+        for (Block block : ModBlocks.BLOCKS.getEntries().stream().map(RegistryObject::get).toList()) {
             simpleBlockItem(block, models().getExistingFile(modLoc("block/" + name(block))));
         }
     }
